fix: overflowing cards

--- a/demo/src/main/resources/static/css/home.css
+++ b/demo/src/main/resources/static/css/home.css
@@ -126,6 +126,7 @@ header {
 
 .card,
 .reminder {
+  position: relative;
   border-radius: 10px;
   box-shadow: 0 0 0px rgba(0, 0, 0, 0.2);
   background-color: #e8e8e8;
@@ -136,6 +137,7 @@ header {
   padding: 1rem 0.5rem 1rem 0.5rem;
   margin-block-end: 1rem;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  overflow: auto;
 }
 
 .card {
@@ -151,6 +153,22 @@ header {
   align-items: center;
   align-self: self-end;
 }
+
+.reminder {
+  height: 70vh;
+  width: clamp(200px, 25%, 500px);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+  margin: 0rem;
+  background-color: #fcfcfc;
+  border: 1px solid #d3d3d3;
+  border-radius: 16px;
+  box-shadow: 0 0 0px rgba(0, 0, 0, 0);
+}
+
 .plant-management {
   display: flex;
   flex-wrap: wrap;
@@ -177,20 +195,6 @@ header {
 form {
   width: 100%;
   height: 100%;
-}
-.reminder {
-  height: 70vh;
-  width: 25%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-  padding: 1rem;
-  margin: 0rem;
-  background-color: #fcfcfc;
-  border: 1px solid #d3d3d3;
-  border-radius: 16px;
-  box-shadow: 0 0 0px rgba(0, 0, 0, 0);
 }
 
 .checkbox {
